--- a/SmartRoom/SmartRoom/packages.config
+++ b/SmartRoom/SmartRoom/packages.config
@@ -3,6 +3,7 @@
   <package id="angularjs" version="1.3.15" targetFramework="net45" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.4" targetFramework="net45" />
+  <package id="Bootstrap.v3.Datetimepicker" version="4.7.14" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Google.Apis" version="1.9.0" targetFramework="net45" />
   <package id="Google.Apis.Auth" version="1.9.0" targetFramework="net45" />
@@ -39,9 +40,11 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
+  <package id="Moment.js" version="2.9.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="Twitter.Bootstrap.Less" version="3.0.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
   <package id="Zlib.Portable" version="1.10.0" targetFramework="net45" />
 </packages>
