--- a/SmartRoom/SmartRoom/packages.config
+++ b/SmartRoom/SmartRoom/packages.config
@@ -4,6 +4,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.4" targetFramework="net45" />
   <package id="Bootstrap.v3.Datetimepicker" version="4.7.14" targetFramework="net45" />
+  <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.7.14.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Google.Apis" version="1.9.0" targetFramework="net45" />
   <package id="Google.Apis.Auth" version="1.9.0" targetFramework="net45" />
